# MOEX_stock_views

./: .env  .env(example)  .gitignore  Makefile  README.md  asnwer  bot.py  bot_v2.py  config.py  handlers.py  keyboard.py  pyproject.toml  request_price_stock.py
.github/workflows/: linter.yaml  linter.yml
