[tool.poetry]
name = "moex_stock_views"
version = "0.1.0"
description = "tg bot"
authors = ["Vjacheslav <goplit2010.konovalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SSLify = "^0.1.5"
python-dotenv = "^0.19.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
