[tool.poetry]
name = "moex_stock_views"
version = "0.1.0"
description = "tg bot"
authors = ["Vjacheslav <goplit2010.konovalov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
requests = "^2.27.1"
apimoex = "^1.2.0"
aiogram = "^2.19"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
